change name repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nikolaysokur.github.io/airquality",
+  "homepage": "https://nikolaysokur.github.io/airquality/",
   "name": "air-quality",
   "version": "0.1.0",
   "private": true,
